--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,9 +14,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:gravity="center_vertical"
-        android:padding="16dp">
+        android:paddingLeft="20dp">
 
         <ImageView
             android:layout_width="wrap_content"
