--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="3"
         android:textSize="16sp"
-        android:textColor="#000"
+        android:textColor="@color/drawer_text"
         android:paddingLeft="18dp" />
 
     <ImageView
