--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="drawer_header">#0099FF</color>
+    <color name="drawer_text">@android:color/black</color>
+    <color name="drawer_header_text">@android:color/white</color>
+    <color name="drawer_select">#EEEEEE</color>
+    <color name="drawer_normal">@android:color/white</color>
+
+    <color name="text_color">@android:color/black</color>
 </resources>
