完成其他主题

--- a/app/src/main/res/layout/story_section_item.xml
+++ b/app/src/main/res/layout/story_section_item.xml
@@ -6,6 +6,7 @@
     android:id="@+id/tv_story_section"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="10dp"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    android:textColor="@color/section_text">
 
 </TextView>
