--- a/app/src/main/res/layout/other_list_item.xml
+++ b/app/src/main/res/layout/other_list_item.xml
@@ -6,10 +6,7 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="4dp"
     android:id="@+id/cardview"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginTop="3dp"
-    android:layout_marginBottom="3dp">
+    android:layout_margin="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
