--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,4 +12,7 @@
 
     <color name="text_color">@android:color/white</color>
 
+    <color name="recycler_bg">#424242</color>
+    <color name="cardview_bg">#616161</color>
+    <color name="section_text">#EEEEEE</color>
 </resources>
