--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,14 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="drawer_header">#0099FF</color>
-    <color name="drawer_text">@android:color/black</color>
-    <color name="drawer_header_text">@android:color/white</color>
     <color name="drawer_select">#EEEEEE</color>
     <color name="drawer_normal">@android:color/white</color>
+    <color name="drawer_text">@android:color/black</color>
+    <color name="drawer_header_text">@android:color/white</color>
 
     <color name="text_color">@android:color/black</color>
+
+    <color name="recycler_bg">@android:color/white</color>
+    <color name="cardview_bg">@android:color/white</color>
+    <color name="section_text">#616161</color>
 </resources>
